sys/arch/dreamcast/dev/g1/wdc_g1.c
@@ -1,4 +1,4 @@
-/* $NetBSD: wdc_g1.c,v 1.3 2017/10/20 07:06:06 jdolecek Exp $ */
+/* $NetBSD: wdc_g1.c,v 1.4 2019/09/09 22:01:23 jdolecek Exp $ */
 
 /*-
  * Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -62,7 +62,9 @@ struct wdc_g1_softc {
 
 static int	wdc_g1_probe(device_t, cfdata_t, void *);
 static void	wdc_g1_attach(device_t, device_t, void *);
+#if 0
 static void	wdc_g1_do_reset(struct ata_channel *, int);
+#endif
 static int	wdc_g1_intr(void *);
 
 CFATTACH_DECL_NEW(wdc_g1bus, sizeof(struct wdc_g1_softc),
@@ -71,9 +73,7 @@ CFATTACH_DECL_NEW(wdc_g1bus, sizeof(struct wdc_g1_softc),
 static int
 wdc_g1_probe(device_t parent, cfdata_t cf, void *aux)
 {
-	struct ata_channel ch;
 	struct g1bus_attach_args *ga = aux;
-	struct wdc_softc wdc;
 	struct wdc_regs wdr;
 	int result = 0, i;
 #ifdef ATADEBUG
@@ -84,11 +84,9 @@ wdc_g1_probe(device_t parent, cfdata_t cf, void *aux)
 	for (i = 0; i < 0x200000 / 4; i++)
 		(void)((volatile uint32_t *)0xa0000000)[i];
 
-	memset(&wdc, 0, sizeof(wdc));
-	memset(&ch, 0, sizeof(ch));
-	ch.ch_atac = &wdc.sc_atac;
+#if 0
 	wdc.reset = wdc_g1_do_reset;
-	wdc.regs = &wdr;
+#endif
 
 	wdr.cmd_iot = ga->ga_memt;
 	if (bus_space_map(wdr.cmd_iot, WDC_G1_CMD_ADDR,
@@ -101,7 +99,7 @@ wdc_g1_probe(device_t parent, cfdata_t cf, void *aux)
 			goto outunmap;
 	}
 
-	wdc_init_shadow_regs(&ch);
+	wdc_init_shadow_regs(&wdr);
 
 	wdr.ctl_iot = ga->ga_memt;
 	if (bus_space_map(wdr.ctl_iot, WDC_G1_CTL_ADDR,
@@ -112,9 +110,8 @@ wdc_g1_probe(device_t parent, cfdata_t cf, void *aux)
 	/* fake up device name for ATADEBUG_PRINT() with DEBUG_PROBE */
 	memset(&dev, 0, sizeof(dev));
 	strncat(dev.dv_xname, "wdc(g1probe)", sizeof(dev.dv_xname));
-	wdc.sc_atac.atac_dev = &dev;
 #endif
-	result = wdcprobe(&ch);
+	result = wdcprobe(&wdr);
 	
 	bus_space_unmap(wdr.ctl_iot, wdr.ctl_ioh, WDC_G1_AUXREG_NPORTS);
  outunmap:
@@ -160,7 +157,9 @@ wdc_g1_attach(struct device *parent, struct device *self, void *aux)
 	sc->sc_wdcdev.sc_atac.atac_channels = sc->wdc_chanlist;
 	sc->sc_wdcdev.sc_atac.atac_nchannels = 1;
 	sc->sc_wdcdev.wdc_maxdrives = 2;
+#if 0
 	sc->sc_wdcdev.reset = wdc_g1_do_reset;
+#endif
 	sc->ata_channel.ch_channel = 0;
 	sc->ata_channel.ch_atac = &sc->sc_wdcdev.sc_atac;
 
@@ -181,6 +180,13 @@ wdc_g1_intr(void *arg)
 	return wdcintr(arg);
 }
 
+#if 0
+/*
+ * This does what the generic wdc_do_reset() does, only with unnecessary
+ * additional GD-ROM reset. Keep code around in case this turns out to be
+ * actually useful/necessary. ATAPI code should do it's own reset in either
+ * case anyway.
+ */
 static void
 wdc_g1_do_reset(struct ata_channel *chp, int poll)
 {
@@ -214,3 +220,4 @@ wdc_g1_do_reset(struct ata_channel *chp, int poll)
 	if (poll != 0)
 		splx(s);
 }
+#endif
